fix: Static img on upload file
Change the path of the image to a local file

--- a/templates/upload/subirArticulo.html
+++ b/templates/upload/subirArticulo.html
@@ -110,7 +110,7 @@
     <!-- Contenedor superior -->
         <div class="top-container">
         <!-- Imagen -->
-        <img class="image img-fluid" src="https://th.bing.com/th/id/R.50ce2cd13ed2e7a732c57abe7ab19cf0?rik=7SUFzI9KU6IMOQ&riu=http%3a%2f%2f3.bp.blogspot.com%2f-ll15GKfuAfU%2fUD_QRuRT3SI%2fAAAAAAAAi-w%2f_VQ08qSDwAE%2fs1600%2fLibros-Viejos-Apilados_Imagenes-de-Libros.jpg&ehk=ITajz1yk%2bQeZz6zZHmcxf5Xbt89WsaenbI3pTQzlkcw%3d&risl=&pid=ImgRaw&r=0" alt="Imagen del libro">
+        <img class="image img-fluid" src="/static/img/library.jpg" alt="Imagen del libro">
         <!-- Campos de entrada -->
         <div class="input-container">
             <input class="input-field form-control" type="text" placeholder="Título" name="title">
