feat(visualization): Display personal general notes on the interface
View and interface

--- a/templates/annotations/my-notes.html
+++ b/templates/annotations/my-notes.html
@@ -80,7 +80,7 @@
                             {% csrf_token %}
                             <textarea class="form-control" name="annotation" id="anotation" rows="3" required placeholder="Escribe aquí tu anotación"></textarea>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end py-2">
-                                <button class="btn btn-dark text-light fw-bold py-0" type="submit">Guardar</button>
+                                <button class="btn btn-dark text-light " type="submit">Guardar</button>
                             </div>
                         </form>
                     </div>
@@ -115,7 +115,7 @@
                                 <p class="card-text">{{ note.content }}</p>
                             </div>
                         {% empty %}
-                            <p>Aún no tienes notas</p>
+                            <p>Aún no tienes anotaciones</p>
                         {% endfor %}
                     </div>
 
@@ -129,7 +129,7 @@
                         <p class="card-text">{{ note.content }}</p>
                     </div>
                 {% empty %}
-                    <p>Aún no tienes notas</p>
+                    <p>Aún no tienes anotaciones</p>
                 {% endfor %}
             </div>
 
