--- a/templates/annotations/document_info.html
+++ b/templates/annotations/document_info.html
@@ -1,4 +1,3 @@
-
 {% extends 'base.html' %}
 
 {% block pre-script %}
@@ -7,64 +6,88 @@
 {% endblock %}
 
 {% block content %}
-	 <div class="container">
+    <div class="container">
         <div class="row">
             <div class="col">
                 <h1>{{ document.title }}</h1>
                 <div class="text-center">
-                    <img class="border rounded bg-body-secondary" src="" alt="Portada del libro {{ document.title }}" id="coverImage" data-path="{{ document.url }}" />
+                    <img class="border rounded bg-body-secondary" src="" alt="Portada del libro {{ document.title }}"
+                         id="coverImage" data-path="{{ document.url }}"/>
                 </div>
             </div>
             <div class="col">
-                <h2>Descripción</h2>
-                <ul class="list-group">
-                    <li class="list-group list-group-item">
-                        <strong>Autor: </strong>  {{ document.author.name }}
-                    </li>
-                    <li class="list-group list-group-item">
-                        <strong>Categoria: </strong> {{ document.category }}
-                    </li>
-                </ul>
-                <div class="text-center p-3">
-                    <a role="button" href="/annotations/book/{{ document.uid }}" class="btn btn-dark text-light">Ver documento</a>
+                <div class="row">
+                    <h2>Descripción</h2>
+                    <ul class="list-group">
+                        <li class="list-group list-group-item">
+                            <strong>Autor: </strong> {{ document.author.name }}
+                        </li>
+                        <li class="list-group list-group-item">
+                            <strong>Categoria: </strong> {{ document.category }}
+                        </li>
+                    </ul>
+                    <div class="text-center p-3">
+                        <a role="button" href="/annotations/book/{{ document.uid }}" class="btn btn-dark text-light">Ver
+                            documento</a>
+                    </div>
                 </div>
+                <div class="row">
+                    <label for="general_annotation" class="form-label">Nueva nota general</label>
+                    <form method="post" id="general_note_form">
+                        {% csrf_token %}
+                        <textarea class="form-control" name="general_annotation" id="general_annotation" required
+                                  rows="3" placeholder="Escribe aquí tu nota"></textarea>
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-end py-2">
+                            <button class="btn btn-dark text-light  " type="submit">Guardar</button>
+                        </div>
+                    </form>
+                </div>
+
             </div>
         </div>
         <div class="row p-3">
-            <h2>Notas</h2>
             <div class="col">
-                    {% for note in document_notes %}
-                        <div class="row p-2">
-                            <div class="row border rounded bg-body-secondary" style="background: #c8cad0">
-                                <div class="col-3"><strong>{{ note.user }}</strong></div>
-                                <div class="col">{{ note.date }}</div>
-                            </div>
-                            <div class="row border rounded">
-                                <p class="m-0">{{ note.content }}</p>
+                <h2>Notas</h2>
+                {% for note in document_notes %}
+                    <div class="row p-2">
+                        <div class="row border rounded bg-body-secondary" style="background: #c8cad0">
+                            <div class="col-3"><strong>{{ note.user }}</strong></div>
+                            <div class="col">{{ note.date }}</div>
+                        </div>
+                        <div class="row border rounded">
+                            <p class="m-0">{{ note.content }}</p>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+
+            <div class="col">
+                <h2>Notas personales</h2>
+                {% for note in personal_notes %}
+                    <div class="row p-2">
+                        <div class="row border rounded bg-body-secondary p-0" >
+                            <div class=" border rounded bg-body-secondary"
+                                 style="background: #c8cad0;">
+                                {{ note.date }}
                             </div>
                         </div>
-                    {% endfor %}
-            </div>
-            <div class="col">
-                <label for="general_annotation" class="form-label">Nueva nota general</label>
-                    <form method="post" id="general_note_form">
-                            {% csrf_token %}
-                            <textarea class="form-control" name="general_annotation" id="general_annotation" required rows="3" placeholder="Escribe aquí tu nota"></textarea>
-                            <div class="d-grid gap-2 d-md-flex justify-content-md-end py-2">
-                                <button class="btn btn-dark text-light fw-bold py-0" type="submit">Guardar</button>
-                            </div>
-                    </form>
+                        <div class="row border rounded bg-body-secondary p-0" >
+                            <p class="m-0">{{ note.content }}</p>
+                        </div>
+                    </div>
+                    {% empty %}
+                    <p>Aún no tienes notas</p>
+                {% endfor %}
             </div>
         </div>
     </div>
 {% endblock %}
-   
 
 {% block post-script %}
 
     <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.10.111/build/pdf.min.js"></script>
 
-   <script>
+    <script>
         const coverImage = document.getElementById('coverImage');
         const pdfPath = coverImage.getAttribute('data-path');
 
@@ -73,27 +96,28 @@
 
         // Cargar el PDF y renderizar la primera página en el canvas
         pdfjsLib.getDocument(pdfPath).promise
-        .then(pdfDoc => pdfDoc.getPage(1))
-        .then(page => {
-            const viewport = page.getViewport({ scale: 0.5 }); // Ajusta la escala según sea necesario
-            canvas.width = viewport.width;
-            canvas.height = viewport.height;
-            const renderContext = {
-                canvasContext: context,
-                viewport: viewport,
-            };
-            return page.render(renderContext).promise;
-        })
-        .then(() => {
-            // Convertir el canvas en una imagen base64
-            const imageDataURL = canvas.toDataURL('image/png');
+            .then(pdfDoc => pdfDoc.getPage(1))
+            .then(page => {
+                const viewport = page.getViewport({scale: 0.5}); // Ajusta la escala según sea necesario
+                canvas.width = viewport.width;
+                canvas.height = viewport.height;
+                const renderContext = {
+                    canvasContext: context,
+                    viewport: viewport,
+                };
+                return page.render(renderContext).promise;
+            })
+            .then(() => {
+                // Convertir el canvas en una imagen base64
+                const imageDataURL = canvas.toDataURL('image/png');
 
-            // Establecer la imagen base64 como fuente de la imagen en tu HTML
-            coverImage.src = imageDataURL;
-        })
-        .catch(error => {
-            console.error('Error al cargar y renderizar el PDF:', error);
-        });
+                // Establecer la imagen base64 como fuente de la imagen en tu HTML
+                coverImage.src = imageDataURL;
+            })
+            .catch(error => {
+                console.error('Error al cargar y renderizar el PDF:', error);
+            });
     </script>
+
 {% endblock %}
 
