feat(social): added username in ui

--- a/templates/social/profile.html
+++ b/templates/social/profile.html
@@ -51,7 +51,7 @@
                                     class="rounded mb-2 img-thumbnail">
                         </div>
                         <div class="media-body mb-5 text-white">
-                            <h4 class="mt-0 mb-0 pb-4">{{ user_profile.first_name }} {{ user_profile.last_name }}</h4>
+                            <h4 class="mt-0 mb-0 pb-4">{{ user_profile.first_name }} {{ user_profile.last_name }} <span class="fs-6 ms-3">@{{ user_profile.username }}</span></h4>
                         </div>
                     </div>
                 </div>
