feat(annotations): Delete general notes

--- a/templates/annotations/document_info.html
+++ b/templates/annotations/document_info.html
@@ -69,7 +69,7 @@
                             <div class=" border rounded bg-body-secondary d-flex justify-content-between"
                                  style="background: #c8cad0;">
                                 {{ note.date }}
-                                <a href="/annotations/book/{{ document.uid }}/?page={{ page }}&action=delete_{{ note.id }}"
+                                <a href="/visualization/document/{{document.uid}}?action=delete_{{ note.id }}"
                                    class="text-danger"
                                    style="margin-left: 1rem"
                                 >
