--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                             <a class="nav-link active" aria-current="page" href="/" id="inicio">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" id="seguidos">Seguidos</a>
+                            <a class="nav-link" href="/users" id="usuarios">Usuarios</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/recommendations" id="recomendaciones">Recomendados</a>
