--- a/templates/collections/create.html
+++ b/templates/collections/create.html
@@ -6,46 +6,73 @@
             height: 150px !important;
             object-fit: contain;
         }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 300px));
+        }
     </style>
 {% endblock %}
 {% block content %}
    <div class="d-flex p-3 justify-content-center">
-    <form method="post" action="/collections/create/" class="gap-3 d-flex flex-column">
-        {% csrf_token %}
-        <h1>Crear una colección</h1>
-        <div class="">
-            <label for="a" class="">Nombre de la colección</label>
-            <input type="text" name="name" class="form-control" required>
-        </div>
-        <div class="">
-            <label for="a" class="">Descripción</label>
-            <textarea  name="description" class="form-control"></textarea>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" name="is_public">
-          <label class="form-check-label" for="flexCheckDefault">
-            Es público
-          </label>
-        </div>
-
-        <div class="">
-            <label for="a" class="">Categoría</label>
-            <select name="category" class="form-select">
-                <option>{{ doc.category }}</option>
-            </select>
-        </div>
-        {% if doc %}
-            <p>La colección inicia con</p>
-            <input type="hidden" value="{{ doc.uid }}" name="doc_id">
-            <div class="d-flex flex-column align-items-center">
-                <p>{{ doc.title }}</p>
-                <img src="" alt="coverImage" data-path="{{ doc.url }}" class="cover-image bg-secondary rounded border border-secondary" />
-            </div>
-            <button type="submit" class="btn btn-primary">Crear colección</button>
-        {% else %}
-            <div>No puedes crear una colección sin un libro</div>
+       <form action="/collections/create/"
+       {% if books|length > 0 %}method="post"{% endif %}
+       >
+        {% if books|length <= 0 %}
+            <input type="hidden" name="first" value="on">
         {% endif %}
-    </form>
+       {% if books|length > 0 %}
+            <div class="d-flex flex-column gap-3">
+            <div class="d-flex flex-column">
+                <label>Nombre de la colección</label>
+                <input type="text" name="name" class="form-control" placeholder="Mi colección" required>
+            </div>
+           <div class="d-flex flex-column">
+                <label>Descripción</label>
+               <textarea name="desc" class="form-control" placeholder="De qué se trata la colección"></textarea>
+            </div>
+           <div class="form-check">
+                  <input class="form-check-input" type="checkbox" name="public" id="flexCheckDefault">
+                  <label class="form-check-label" for="flexCheckDefault">
+                    Es pública
+                  </label>
+            </div>
+            </div>
+       {% endif %}
+       {% csrf_token %}
+       {% if books|length <= 0 %}
+            <div class="input-group mt-3">
+               <select name="category" class="form-select" >
+                   {% for category_ in categories %}
+                       <option>{{ category_ }}</option>
+                   {% endfor %}
+               </select>
+            {% if books|length <= 0 %}
+                <button class="btn btn-primary" type="submit">Buscar</button>
+            {% endif %}
+           </div>
+       {% else %}
+           <input type="text" readonly name="category" value="{{ category }}" class="form-control">
+       {% endif %}
+
+
+           <div class="d-flex flex-wrap mt-4 gap-3">
+               {% for book in books %}
+                   <div class="d-flex flex-column align-items-center" >
+                       <img src="" alt="coverImage" data-path="{{ book.url }}" class="cover-image border border-secondary-subtle" />
+                        <div class="form-check">
+                            <label class="form-check-label">{{ book.title }}</label>
+                            <input type="checkbox" name="selected_books" value="{{ book.uid }}" class="form-check-input">
+                        </div>
+                   </div>
+                {% endfor %}
+           </div>
+            {% if books|length > 0 %}
+                <div class="d-flex justify-content-center mt-3">
+                    <button class="btn btn-primary" type="submit">Crear coleccion</button>
+                </div>
+            {% endif %}
+       </form>
    </div>
 {% endblock %}
 {% block post-script %}
