--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,33 @@
     .fit {
         width: fit-content;
     }
+    .img-container {
+            width: 220px;
+            height: 180px;
+            display: flex;
+            justify-content: center;
+            overflow: hidden;
+        }
+        .img-container img {
+            height: 250px;
+            width: auto;
+            object-fit: cover;
+        }
+
+        .spacer {
+            height: 130px !important;
+        }
+
+        .cover-image {
+            object-fit: contain;
+            height: 100%;
+            width: auto;
+        }
+
+        .scroller {
+            overflow: scroll;
+        }
+
     </style>
     {% endblock %}
 {% block page %}
@@ -11,6 +38,39 @@
 {% endblock %}
 {% block content %}
     <div class="container mt-3">
+        <h1>Bienvenido, {{ user.get_full_name }}</h1>
+        <div class="">
+            <a href="/collections">
+                <h2>Tus colecciones</h2>
+            </a>
 
+            <div class="d-flex gap-3">
+                {% for collection in collections %}
+                    <div class="d-flex card flex-column align-items-center rounded-5 rounded-top-5 border border-1 border-secondary-subtle  p-0 rounded shadow">
+                <div class="img-container h-50 w-100 rounded-2 mb-3 bg-secondary">
+                    <img src="/static/img/library.jpg" alt="">
+                </div>
+                <p>{{ collection.user.get_full_name }}</p>
+                <span class="float-start badge rounded-pill  py-1 px-2 bg-info m-1">
+                    {{ collection.calc_score }}
+                    <i class="fa-solid fa-star"></i>
+                </span>
+                <h2 class="text-center">{{ collection.name }} </h2>
+                <a href="/collections/{{ collection.id }}">
+                    <button class="btn btn-primary mx-2 pt-2 mt-2 text-white rounded-pill">
+                        Ver colección
+                        <i class="fa-solid fa-arrow-right-long"></i>
+                    </button>
+                </a>
+            </div>
+                {% endfor %}
+            </div>
+        </div>
     </div>
+
+{% endblock %}
+
+{% block post-script %}
+    <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.10.111/build/pdf.min.js"></script>
+    <script src="/static/js/images.js"></script>
 {% endblock %}
