--- a/templates/collections/collections.html
+++ b/templates/collections/collections.html
@@ -34,7 +34,7 @@
     <div class="container">
         <h1 class="pt-4  fs-1 text fw-bold">Mis colecciones</h1>
         <a href="/collections/create">
-            <button class="btn btn-primary">
+            <button class="btn btn-outline-primary">
                 Crear colección
             </button>
         </a>
