--- a/templates/collections/collection.html
+++ b/templates/collections/collection.html
@@ -94,7 +94,9 @@
                         </div>
 
                         <div class="d-flex gap-1 my-1">
-                            <span class="badge bg-info mx-2"><i class="fa-solid fa-star px-1"></i>{{ book.score }}</span>
+                            <a href="/articles/document/{{ book.uid }}">
+                                <span class="badge bg-info mx-2"><i class="fa-solid fa-star px-1"></i>{{ book.score }}</span>
+                            </a>
                             <span class="badge bg-secondary">{{ book.category }}</span>
                         </div>
                         <h3 class="text-center my-1 fs-4">{{ book.title }}</h3>
